fix flicker caused by not specifically targeting nav

--- a/_sass/_faq.scss
+++ b/_sass/_faq.scss
@@ -14,10 +14,6 @@ body.faq {
       font-size: 1.3rem;
       color: $link-color;
       font-weight: 400;
-      opacity: 0.8;
-      &:hover {
-          opacity: 1;
-      }
       &:visited {
         color: $link-color;
       }
