--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -10,41 +10,41 @@ body {
 }
 
 body.use-certbot {
-  ul li:nth-of-type(2) { 
+  nav.main-nav ul li:nth-of-type(2) { 
     a {
       color: #000;
     }
   }
 }
 body.about {
-  ul li:nth-of-type(3) { 
+  nav.main-nav ul li:nth-of-type(3) { 
     a {
       color: #000;
     }
   }
 }
 body.faq {
-  ul li:nth-of-type(4) { 
+  nav.main-nav ul li:nth-of-type(4) { 
     a {
       color: #000;
     }
   }
 }
 body.docs {
-  ul li:nth-of-type(5) { 
+  nav.main-nav ul li:nth-of-type(5) { 
     a {
       color: #000;
     }
   }
 }
 body.support {
-  ul li:nth-of-type(6) { 
+  nav.main-nav ul li:nth-of-type(6) { 
     a {
       color: #000;
     }
   }
 }
-body.source {
+nav.main-nav body.source {
   ul li:nth-of-type(2) { 
     a {
       color: #000;
